@@ -1,6 +1,6 @@
 #!/bin/sh
 #		GMT EXAMPLE 28
-#		$Id: job28.sh,v 1.4 2008-06-13 00:31:34 guru Exp $
+#		$Id: job28.sh,v 1.5 2009-01-16 21:43:11 guru Exp $
 #
 # Purpose:	Illustrates how to mix UTM data and UTM projection
 # GMT progs:	makecpt, grdgradient, grdimage, grdinfo, pscoast, pstext, mapproject
@@ -22,7 +22,7 @@ UR=`cut -f3,5 tmp.txt | mapproject -Ju5Q/1:1 -F -C -I --OUTPUT_DEGREE_FORMAT=ddd
 grdimage Kilauea.utm.nc -IKilauea.utm_i.nc -CKilauea.cpt -Jx1:170000 -P -K -B5000g5000WSne \
 	-U"Example 28 in Cookbook" --D_FORMAT=%.10g --ANNOT_FONT_SIZE=9 --GRID_CROSS_SIZE=0.1i > $ps
 # Overlay geographic data and coregister by using correct region and projection with the same scale
-pscoast -R$LL/${UR}r -Ju5Q/1:170000 -O -K -Df -Slightblue -W0.5p -B5mg5mNE --ANNOT_FONT_SIZE=12 \
+pscoast -R$LL/${UR}r -Ju5Q/1:170000 -O -K -Df+ -Slightblue -W0.5p -B5mg5mNE --ANNOT_FONT_SIZE=12 \
 	--PLOT_DEGREE_FORMAT=ddd:mmF >> $ps
 psbasemap -R -J -O -K --ANNOT_FONT_SIZE=9 -Lf155:07:30W/19:15:40N/19:23N/5k+l1:17,000+u \
 	--LABEL_FONT_SIZE=10 >> $ps
